--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,22 @@
     android:orientation="vertical"
     tools:context=".MainActivity"
     style="@style/AppTheme">
+    <ImageView
+        android:id="@+id/historyMenu_ic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu_black_24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:contentDescription="History" />
 
     <TextView
         android:id="@+id/tvTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        tools:text="Answer" />
+        tools:text="Answer"
+        android:layout_below="@+id/historyMenu_ic"
+        android:layout_marginTop="30dp"/>
 
 
     <EditText
@@ -27,7 +37,9 @@
         android:id="@+id/firstLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText">
+        android:layout_below="@+id/editText"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="5dp">
 
         <Button
             android:id="@+id/buttonOne"
@@ -60,7 +72,9 @@
         android:id="@+id/secondLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/firstLayout">
+        android:layout_below="@+id/firstLayout"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/buttonFour"
@@ -92,7 +106,9 @@
         android:id="@+id/ThirdLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/secondLayout">
+        android:layout_below="@+id/secondLayout"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/buttonSeven"
@@ -124,7 +140,9 @@
         android:id="@+id/FourthdLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ThirdLayout">
+        android:layout_below="@+id/ThirdLayout"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/buttonZero"
@@ -151,20 +169,39 @@
             android:text="/" />
 
     </LinearLayout>
-    <Button
-        android:id="@+id/buttonClear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="C"
-        android:layout_below="@id/FourthdLayout"/>
 
-    <Button
-        android:id="@+id/buttonDecimalPoint"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/FifthLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/FourthdLayout"
-        android:layout_toRightOf="@+id/buttonClear"
-        android:text="."/>
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:id="@+id/buttonClear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="C"
+           />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="C"
+            />
+
+        <Button
+            android:id="@+id/buttonDecimalPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="."/>
+        <Button
+            android:id="@+id/buttonDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="X"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
